--- a/DSA_Assignment_Redo.vcxproj
+++ b/DSA_Assignment_Redo.vcxproj
@@ -150,12 +150,14 @@
     <ClCompile Include="DSA_Assignment_Redo.cpp" />
     <ClCompile Include="File.cpp" />
     <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="Station.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="File.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="Station.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
